--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "JennyWebsite"
+title: "Welcome"
 ---
 
  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius, lectus sollicitudin ullamcorper auctor, leo orci semper ligula, sed accumsan velit arcu id est. Nam tellus augue, ullamcorper quis nulla a, blandit posuere nulla. Suspendisse egestas risus dictum diam finibus volutpat. Pellentesque non egestas diam. Aliquam vitae aliquet libero, vel dignissim tortor. Pellentesque luctus mauris a leo dapibus tristique. Phasellus non commodo risus. Vivamus nec velit lorem. Proin facilisis auctor felis ultrices tincidunt. Mauris auctor feugiat metus, quis ultricies sem placerat a. Quisque in nulla id ligula aliquam tempus. Aenean tincidunt lectus felis, porta placerat augue sagittis lobortis.
