--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,4 @@
 title: "About"
 ---
 
-About this site
+Hi my names Jenny and I'm a yoga teacher based in Glasgow, I teach at Glasgow University on wednesdays.
