--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,15 @@
 ---
-title: "Welcome"
+navbar: false
+title: "Yogi Jenny"
 ---
+
+
 
 Hey my name's Jenny and I'm currently based in Glasgow. I'm an Ambitious and creative yoga teacher with a genuine love for all aspects of yoga, from physical to philosophical and spiritual. Seeking to thrive professionally in the Glasgow yoga community through teaching Vinyasa, Yin and Hatha classes, host specialized workshops and utilize my strong level of knowledge and prior experience in the yoga industry.
 
+
 Embarking on a multi-style YTTC training in India was a hugely insightful experience. The course covered the philosophy and history of yoga, anatomy of the human body, and most importantly, ways in which to confidently teach Hatha and Vinyasa style yoga classes for beginner and intermediate levels. The course was heavily focused on the traditional aspects of yoga, particularly surrounding Sanskrit translation and the philosophy of yoga.
 
-::: {.column-screen}
-![A full screen image](main.jpg)
-:::
+<br>
+
+![](main.jpg)
