bit more content

--- a/practice.qmd
+++ b/practice.qmd
@@ -3,3 +3,8 @@ title: "Practice with Me"
 ---
 
 I currently teach at the Glasgow University Sport's center.
+
+(Add more here)
+
+
+![](assets/about.jpg)
