--- a/practice.qmd
+++ b/practice.qmd
@@ -2,7 +2,7 @@
 title: "Practice with Me"
 ---
 
-I currently teach at the Glasgow University Sport's center.
+I currently teach at Glasgow University Sports Association in the Stevenson Building and cover yoga classes at Lift Gyms, Edinburgh.
 
 (Add more here)
 
