--- a/index.qmd
+++ b/index.qmd
@@ -2,8 +2,6 @@
 title: "Yogi Jenny"
 ---
 
-
-
 Based in Glasgow, I am a Freelance Yoga Instructor with a genuine love for all aspects of yoga, from physical to philosophical and spiritual. I teach a variety of styles of yoga, including Energising and Slow Vinyasa, Power Yoga and Restorative Yin.
 
 <br>
@@ -14,7 +12,8 @@ Based in Glasgow, I am a Freelance Yoga Instructor with a genuine love for all a
 ![](/assets/updog.jpg)
 :::
 
-Embarking on a multi-style YTTC training in India was a hugely insightful experience. The course covered the philosophy and history of yoga, anatomy of the human body, and most importantly, ways in which to confidently teach Hatha and Vinyasa style yoga classes for beginner and intermediate levels. The course was heavily focused on the traditional aspects of yoga, particularly surrounding Sanskrit translation and the philosophy of yoga.
+
+In October 2023, I completed my 200-hour multi-style YTTC training in Goa, India, at the amazing Drishti International Yoga School, with my teachers Manav and Samita. In order to honour the beauty of the ancient practice of Yoga within my classes, I am conscious to intergrate spiritual elements within the physical practice. 
 
 <br>
 
