--- a/contact.qmd
+++ b/contact.qmd
@@ -1,7 +1,7 @@
 ---
-title: "Get in touch"
+title: "Contact me"
 ---
 
-For business enquirees and anything else contact me at:
+Contact me:
 
 ![](/assets/crow.jpg)
